; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_connect_to_server.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_connect_to_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Remaining connection attempts: %d\00", align 1
@INVALID_SOCKET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i64, i64)* @connect_to_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @connect_to_server(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  br label %9

9:                                                ; preds = %27, %3
  %10 = load i64, i64* %6, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @LOGD(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = call i64 @connect_and_read_byte(i32 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i64, i64* @INVALID_SOCKET, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %9
  %19 = load i64, i64* %8, align 8
  store i64 %19, i64* %4, align 8
  br label %33

20:                                               ; preds = %9
  %21 = load i64, i64* %6, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @SDL_Delay(i64 %24)
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %26
  %28 = load i64, i64* %6, align 8
  %29 = add nsw i64 %28, -1
  store i64 %29, i64* %6, align 8
  %30 = icmp sgt i64 %29, 0
  br i1 %30, label %9, label %31

31:                                               ; preds = %27
  %32 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %32, i64* %4, align 8
  br label %33

33:                                               ; preds = %31, %18
  %34 = load i64, i64* %4, align 8
  ret i64 %34
}

declare dso_local i32 @LOGD(i8*, i32) #1

declare dso_local i64 @connect_and_read_byte(i32) #1

declare dso_local i32 @SDL_Delay(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
